# code-projects

./: .gitignore  minimax_vision.py
calculator-demo/: README.md  calculator.py  (+1 more)
ecc-loop/: ARCHITECTURE.md  LOOP.md  README.md  STATE.md  loop-budget.md  loop-constraints.md  progress.md  pyproject.toml
ecc-loop/.ecc_logs/: metrics.json  run-log.jsonl
ecc-loop/.hermes/plans/: 2026-06-21_JiuwenSwarm-Research-Plan.md  2026-06-21_JiuwenSwarm_ECC_Improvement_Plan.md  2026-06-21_JiuwenSwarm_Implementation_Plan.md
ecc-loop/ecc_loop/: __init__.py  checkpoint.py  cli.py  continual.py  engine.py  goal_freeze.py  handlers.py  learning.py  llm.py  logger.py  models.py  precise_specs.py  proactive.py  reader.py  reflection.py  run_log.py  safety.py  scanner.py  seed.py  worktree.py
ecc-loop/plans/: five-stage-refactor.md
ecc-loop/plans/juiwenswarm/: delegate-improvement.md
ecc-loop/research/: mem0-deploy-state.md
ecc-loop/tests/: test_circuit_breaker.py  test_cli.py  test_config_validation.py  test_engine.py  test_goal.py  test_goal_freeze.py  test_handlers.py  test_integration.py  test_learning.py  test_llm.py  test_logger.py  test_models.py  test_precise_specs.py  test_reflection.py  test_safety.py  test_scanner.py  test_seed.py  test_self_evolution.py  test_worktree.py
log-analyzer/: README.md  RESEARCH.md  SPEC.md  pyproject.toml  requirements.txt  test_cli.py
log-analyzer/src/log_analyzer/: __init__.py  filter.py  main.py  parser.py  plot.py  stats.py
log-analyzer/tests/: __init__.py  test_filter.py  test_parser.py  test_plot.py  test_stats.py
(+59 files in other folders)
