[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ecc-loop"
version = "1.0.0"
description = "Evolutionary Consciousness Code Loop — Hermes self-improvement cycle"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["ecc_loop*"]
