[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analyzer"
version = "0.1.0"
description = "CLI 日志分析工具 - 解析、过滤、统计和可视化日志"
authors = [{name = "Developer"}]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "typer>=0.25.1",
    "plotext>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
log-analyzer = "log_analyzer.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
